[project]
name = "coderetreat-aiohttp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "astynax", email = "astynax@users.noreply.github.com" }
]
dependencies = [
    "aiohttp>=3.9.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coderetreat_aiohttp"]
